--- a/style.css
+++ b/style.css
@@ -1,51 +1,48 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-  }
-
-body {
-    background: url(images/Kobe2.png);
-    background-size: contain;
-    --hue: var(--hue-neutral);
+* {
     padding: 0;
     margin: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(var(--hue), 100%, 20%);
+	font-family: 'Poppins', sans-serif;
+	box-sizing: border-box;
 }
 
 .game-title {
-    font-size: 7rem;
-    color: gold;
+    font-size: 5.4rem;
+    color: oldlace;
 }
 
-#easy-btn, #intermediate-btn, #hard-btn {
-	box-shadow:inset 0px 1px 30px 0px #e184f3;
-	background:linear-gradient(to bottom, #c123de 5%, #a20dbd 100%);
-	background-color:#c123de;
-	border-radius:6px;
-	border:2px solid #a511c0;
-	display:inline-block;
-	cursor:pointer;
-	color:gold;
-	font-family:Arial;
-	font-size:28px;
-	font-weight:bold;
-	padding:32px 76px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #9b14b3;
-    margin: 8%;
+.landingPage {
+	background: url(images/nba.jpg)no-repeat;
+    background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100vw;
+    height: 100vh;
+	padding: 2rem;
+	margin: 0 auto;
+	flex-direction: column;
+}
+* .btn {
+	font-size: 2.4rem;
+	padding: 2rem 0;
+	width: 30rem;
+	text-align: center;
+	margin-bottom: 1rem;
+	color:	rgb(28, 26, 26);
+	background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 
-#easy-btn:hover, #intermediate-btn:hover, #hard-btn:hover {
-	background:linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
-	background-color:#a20dbd;
+.btn:hover {
 }
 
-#easy-btn:active, #intermediate-btn:active, #hard-btn:active {
+.btn:active {
 	position:relative;
 	top:1px;
+}
+
+.landingPage .gh-btn {
+	position: absolute;
+	color: gold;
+	font-size: 1.2rem;
+	bottom: 10%;
 }
