Edited css for easy.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+*, *::before, *::after {
     padding: 0;
     margin: 0;
 	font-family: 'Poppins', sans-serif;
@@ -11,8 +11,8 @@
 	padding-bottom: 3rem;
 }
 
-.container {
-	background: url(images/nba.jpg)no-repeat;
+.index-container {
+	background: url(/Images/nba.jpg)no-repeat;
     background-size: cover;
 	display: flex;
 	justify-content: center;
