--- a/css/easy.css
+++ b/css/easy.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
 }
 
-.easyContainer {
+.container {
     width: 800px;
     max-width: 80%;
     background-color: white;
