--- a/css/epic.css
+++ b/css/epic.css
@@ -111,3 +111,10 @@ body {
 .questionNumber {
     font-size: 1.5rem;
 }
+
+.homeButton {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+}
