--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
     font-size: 5.4rem;
     color: rgba(247, 244, 244, 0.934);
 	padding-bottom: 3rem;
+	text-align: center;
 }
 
 .index-container {
@@ -57,8 +58,6 @@
 	transform: scale(1.04);
 }
 
-
-
 .gh-btn {
 	position: absolute;
 	color: gold;
@@ -66,3 +65,14 @@
 	bottom: 10%;
 	text-decoration: none;
 }
+
+span {
+	opacity: .1;
+	transition: all 0.7s ease;
+}
+
+span.fade {
+	opacity: 1;
+	color: white
+}
+
