--- a/css/easy.css
+++ b/css/easy.css
@@ -113,17 +113,24 @@ body {
 }
 
 .finalPage {
-  font-size: 5rem;
+ width: 35rem;
+ font-size: 5rem;
  text-align: center;
  line-height: 3rem;
  
 }
 
 .finalScore{
-    text-decoration: none;
-    text-align: center;
-    color: black;
-    font-size: 5rem;
+        font-size: 2.4rem;
+        padding: 2.5rem 1rem;
+        width: 12rem;
+        text-align: center;
+        margin-bottom: 1rem;
+        color:	rgb(28, 26, 26);
+        background: rgb(26,70,105);
+        background: linear-gradient(90deg, rgba(26,70,105,1) 0%, rgba(223, 219, 219, 0.892) 51%, rgba(128,45,68,1) 100%);
+        border-radius: 10px;
+        text-decoration: none;
 }
 
 .homeButton {
